<resources>
    <string name="app_name">InClassAssignment02_ThomasS</string>
    <string name="birthday">Happy Birthday</string>
    <string name="gift">Gifts</string>
    <string name="location">Location</string>
    <string name="to_you">To you!</string>
    <string name="title_activity_relative_layout">relative_layout</string>
    <string name="title_activity_2">Activity2</string>
    <string name="Guests">Guests</string>

</resources>
